# Procurement-Compliance-Review-Environment

./: .env.example  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_basic.py
data/: tasks.json
scripts/: baseline_inference.py  test_client.py
server/: Dockerfile  app.py  environment.py
